cluster/apps/vpn/shadowsocks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shadowsocks-rust
  namespace: vpn
  labels:
    app: shadowsocks-rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shadowsocks-rust
  template:
    metadata:
      labels:
        app: shadowsocks-rust
    spec:
      volumes:
        - name: config
          configMap:
            name: shadowsocks-rust-configmap
        - name: plugins
          emptyDir: { }
      containers:
        - name: shadowsocks-rust
          image: ghcr.io/shadowsocks/ssserver-rust:v1.23.0
          command: [ "ssserver", "-c", "/etc/shadowsocks-rust/config.json", "-vv" ]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/shadowsocks-rust
              readOnly: true
            - name: plugins
              mountPath: /usr/local/bin
          ports:
            - name: ss-8388
              containerPort: 8388
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8388
            failureThreshold: 3
            initialDelaySeconds: 1
            timeoutSeconds: 1
          readinessProbe:
            tcpSocket:
              port: 8388
            initialDelaySeconds: 2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 32Mi
