cluster/apps/vpn/shadowsocks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shadowsocks-rust-ingress
  namespace: vpn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "external"
  rules:
    - host: "ss.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: shadowsocks-rust-svc
                port:
                  number: 8388
  tls:
    - hosts:
        - "ss.${SECRET_DOMAIN}"
